# context-guard

./: .gitignore  README.md  live_test_playwright.py  pyproject.toml
docs/superpowers/plans/: 2026-05-20-context-guard-m1-free-core.md
docs/superpowers/specs/: 2026-05-20-context-guard-design.md  2026-05-20-savings-readout-and-proxy-everything-design.md
examples/: .context-guard.toml
src/context_guard/: config.py  distill.py  fence.py  middleware.py  server.py  store.py  tokens.py  tools.py  usage.py
tests/: test_config.py  test_distill.py  test_fence.py  test_integration.py  test_middleware.py  test_store.py  test_tokens.py  test_tools.py  test_usage.py
tests/fixtures/: stateful_counter_server.py
