[project]
name = "context-guard"
version = "0.1.0"
description = "Local MCP aggregating proxy that auto-fences oversized tool output to protect the context window"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4",
    "httpx>=0.27",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
context-guard = "context_guard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_guard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
